<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/shadow_background">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/large_margin">

        <com.ijoomer.tips.customviews.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contactus_content"
            android:textColor="@color/grey"
            android:textSize="@dimen/large_text_size"/>


        <View
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btnCallUs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/pink"
            android:text="@string/call_us"
            android:textSize="@dimen/medium_text_size"
            android:background="@drawable/grey_button_selector"/>


        <View
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btnEmailUs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/pink"
            android:text="@string/email_us"
            android:textSize="@dimen/medium_text_size"
            android:background="@drawable/grey_button_selector"/>

        <View
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btnWebsite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/pink"
            android:text="@string/website"
            android:textSize="@dimen/medium_text_size"
            android:background="@drawable/grey_button_selector"/>


        <View
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btnCallMeBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/pink"
            android:text="@string/call_me_back"
            android:textSize="@dimen/medium_text_size"
            android:background="@drawable/grey_button_selector"/>

        <View
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>


        <Button
            android:id="@+id/btnFAQ"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/pink"
            android:text="@string/faq"
            android:textSize="@dimen/medium_text_size"
            android:background="@drawable/grey_button_selector"/>

    </LinearLayout>
</LinearLayout>
