<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:gravity="center">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.30"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/splash_logo"/>

        <com.ijoomer.tips.customviews.CustomBoldTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vision_to_results"
            android:textSize="@dimen/extra_large_text_size"
            android:textColor="@color/grey"
            android:layout_marginTop="@dimen/medium_margin"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/lnrFirstSuite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:visibility="invisible">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/splash_suite_one"/>

            <com.ijoomer.tips.customviews.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/large_text_size"
                android:layout_marginLeft="@dimen/medium_margin"
                android:textColor="@color/pink"
                android:text="@string/set_direction"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/lnrSecondSuite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/medium_margin"
            android:visibility="invisible">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/splash_suite_two"/>

            <com.ijoomer.tips.customviews.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/large_text_size"
                android:layout_marginLeft="@dimen/medium_margin"
                android:text="@string/enable_execute"
                android:textColor="@color/blue"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/lnrThirdSuite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/medium_margin"
            android:visibility="invisible">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/splash_suite_three"/>

            <com.ijoomer.tips.customviews.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/large_text_size"
                android:text="@string/engage_excite"
                android:layout_marginLeft="@dimen/medium_margin"
                android:textColor="@color/green"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/lnrFourSuite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/medium_margin"
            android:visibility="invisible">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/splash_suite_four"/>

            <com.ijoomer.tips.customviews.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/medium_margin"
                android:text="@string/sustain_momentum"
                android:textColor="@color/orange"
                android:textSize="@dimen/large_text_size"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/normal_margin"
        android:gravity="center">
        <ProgressBar
            android:id="@+id/pbrLoading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@android:style/Widget.ProgressBar.Small"
            android:visibility="visible"/>
        <com.ijoomer.tips.customviews.CustomBoldTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_loading"
            android:textColor="@color/grey"
            android:layout_marginLeft="@dimen/medium_margin"
            android:textSize="@dimen/normal_text_size"/>
    </LinearLayout>
</LinearLayout>
